--- a/assets/styles/student.css
+++ b/assets/styles/student.css
@@ -38,3 +38,26 @@
     font-size: 3vw;
   }
 }
+
+h6 {
+  font-size: 20px;
+}
+
+#container h6 {
+  width: 90px;
+  margin: 15px auto 30px auto;
+  border-bottom: solid 3px #253965;
+  text-align: center;
+}
+
+@media screen and (min-width: 1030px) {
+  #container h6 {
+    margin-left: calc(50vw - 500px);
+  }
+}
+
+@media screen and (max-width: 1030px) {
+  #container h6 {
+    margin-left: 30px;
+  }
+}
